Add comment on evaluateEndgame function

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
     }   
 
+    //Compares player and computer score to select a final message.
     function evaluateEndgame(playerScore, compScore){
         if (playerScore > compScore){
             return("You've won the game! Reload to prove this wasn't a fluke.");
