--- a/index.html
+++ b/index.html
@@ -2,103 +2,17 @@
 <head>
     <title>Rock Paper Scissors</title>
 </head>
+<link rel="stylesheet" href="style.css">
 
-<script>
-    //Function to get computer's selection
-    function computerPlay(){
-        rnd = Math.floor(Math.random()*3);
-        switch (rnd){
-            case 0:
-               selection = "Rock";
-               break;
-            case 1:
-                selection = "Paper";
-                break;
-            case 2: 
-                selection = "Scissors";
-                break; 
-        }
-        return (selection);
-    }
-
-    //Makes the player input conform to the same upper and lower cases
-    //that I chose for the computerPlay outputs. Could just make computer
-    //all uppercase since the strings for win and lose are hard-coded now. 
-    function processString(str){
-        firstLetter = str.charAt(0)
-        return (firstLetter.toUpperCase() + str.slice(1).toLowerCase());
-    }
-   
-    //Compares selections to output a result and modify scores.
-    function playRound(playerSelection, computerSelection){
-        playerSelection = processString(playerSelection);
-        if (playerSelection === computerSelection){
-            return `Tie! You both selected ${playerSelection}.`
-        }
-        switch (playerSelection){
-            case "Rock":
-                if (computerSelection === "Paper"){
-                    result = "You Lose! Paper covers Rock.";
-                    compScore +=1;
-                }else{
-                    result = "You Win! Rock smashes Scissors."
-                    playerScore += 1;
-                }
-                return result
-                break;
-            case "Paper":
-                if (computerSelection === "Scissors"){
-                        result = "You Lose! Scissors cut Paper.";
-                        compScore +=1;
-                }else{
-                        result = "You Win! Paper covers Rock."
-                        playerScore += 1;
-                }
-                return result
-                break;
-            case "Scissors":
-                if (computerSelection === "Rock"){
-                        result = "You Lose! Rock smashes Scissors.";
-                        compScore +=1;
-                }else{
-                        result = "You Win! Scissors cut Paper."
-                        playerScore += 1;
-                }
-                return result
-                break;
-            default:
-                result = "Fowl! Not a valid choice. Computer gets penalty point.";
-                compScore += 1;
-                return result;
-                break;
-        }
-
-    }   
-
-    //Compares player and computer score to select a final message.
-    function evaluateEndgame(playerScore, compScore){
-        if (playerScore > compScore){
-            return("You've won the game! Reload to prove this wasn't a fluke.");
-        }else if (compScore > playerScore){
-            return("You've lost the game. Reload to salvage your dignity.");
-        }else{
-            return("You've tied. Reload to achieve catharsis");
-        }
-    }
-
-    //Play a game x rounds long.
-    function game(numberOfRounds){
-        for (i = 0; i < numberOfRounds; i++) {
-            const computerSelection = computerPlay();
-            const playerSelection = window.prompt("Select Rock, Paper, or Scissors" , "Rock")
-            console.log(playRound(playerSelection, computerSelection));
-            console.log("Your Score: " + playerScore);
-            console.log("Computer's Score: " + compScore);
-        }
-        console.log(evaluateEndgame(playerScore, compScore));
-    }
-
-    let playerScore = 0;
-    let compScore = 0;    
-    game(5);
-</script>
+<div class=game>
+    <div class="button">
+        <button class="rock">Rock</button>
+    </div>
+    <div class="button">
+        <button class="paper">Paper</button>
+    </div>
+    <div class="button">
+        <button class="scissors">Scissors</button>
+    </div>
+</div>
+<script type="text/javascript" src="script.js"></script>
