Add button event listener and modify code for support of that

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
 <div class=game>
     <div class="button">
-        <button class="rock">Rock</button>
+        <button id="Rock">Rock</button>
     </div>
     <div class="button">
-        <button class="paper">Paper</button>
+        <button id="Paper">Paper</button>
     </div>
     <div class="button">
-        <button class="scissors">Scissors</button>
+        <button id="Scissors">Scissors</button>
     </div>
 </div>
 <script type="text/javascript" src="script.js"></script>
