Display results and scores with DOM methods

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 </head>
 <link rel="stylesheet" href="style.css">
 
-<div class=game>
-    <div class="button">
-        <button id="Rock">Rock</button>
+<div class = game>
+    <div class = "button">
+        <button id = "Rock">Rock</button>
     </div>
-    <div class="button">
-        <button id="Paper">Paper</button>
+    <div class = "button">
+        <button id = "Paper">Paper</button>
     </div>
-    <div class="button">
-        <button id="Scissors">Scissors</button>
+    <div class = "button">
+        <button id = "Scissors">Scissors</button>
     </div>
+    <div class = "score" id = "playerScore"></div>
+    <div class = "score" id = "compScore"></div>
+    <div class = "results"></div>
 </div>
 <script type="text/javascript" src="script.js"></script>
