--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <link rel="stylesheet" href="style.css">
 
-<div class = game>
+<div class = "game">
     <div class = "button">
         <button id = "Rock">Rock</button>
     </div>
@@ -17,5 +17,6 @@
     <div class = "score" id = "playerScore"></div>
     <div class = "score" id = "compScore"></div>
     <div class = "results"></div>
+    <div class = "endgame"></div>
 </div>
 <script type="text/javascript" src="script.js"></script>
