Add images and rename to Quartz Parchment Shears

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <head>
-    <title>Rock Paper Scissors</title>
+    <title>Quartz Parchment Shears</title>
 </head>
 <link rel="stylesheet" href="style.css">
 
 <div class = "game">
     <div class = "button">
-        <button id = "Rock">Rock</button>
+        <button id = "Quartz">Quartz</button>
     </div>
     <div class = "button">
-        <button id = "Paper">Paper</button>
+        <button id = "Parchment">Parchment</button>
     </div>
     <div class = "button">
-        <button id = "Scissors">Scissors</button>
+        <button id = "Shears">Shears</button>
     </div>
     <div class = "score" id = "playerScore"></div>
     <div class = "score" id = "compScore"></div>
