Add round history function

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <div class = "score" id = "playerScore"></div>
     <div class = "score" id = "compScore"></div>
     <div class = "results"></div>
-    
+</div>
+<div class="history">
+    <ul class="rounds"></ul>
 </div>
 <script type="text/javascript" src="script.js"></script>
